--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!-- Clone by @WusThanhDieu -->
 <!DOCTYPE html>
 <html lang="en" class="dark">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Github WusThanhDieu</title>
+    <title>Love</title>
     <link href="https://fonts.bunny.net/css?family=instrument-sans:400,500,600" rel="stylesheet"/>
     <link rel="stylesheet" href="/static/css/app.css" />
   </head>
@@ -15,10 +14,10 @@
         "component": "views/home",
         "props": {
           "errors": {},
-          "name": "Github WusThanhDieu",
+          "name": "GiftsBox",
           "quote": {
-            "message": "",
-            "author": ""
+            "message": "Walk as if you are kissing the Earth with your feet.",
+            "author": "Dinh Duy Vinh"
           },
           "auth": {
             "user": null
@@ -64,11 +63,11 @@
             "fontName": "Mali",
             "color": "#ff0019",
             "messages": [
-              "Github WusThanhDieu",
-              "Test 1",
-              "Test 2"
+              "Ben \u2764 Jocelyn",
+              "09/01/2025",
+              "Thank u for coming"
             ],
-            "music": "//thanhdieu.com/music.mp3"
+            "music": ""
           },
           "clientId": "/"
         },
