--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Love</title>
+    <title>Love For You</title>
     <link href="https://fonts.bunny.net/css?family=instrument-sans:400,500,600" rel="stylesheet"/>
     <link rel="stylesheet" href="/static/css/app.css" />
   </head>
@@ -63,8 +63,10 @@
             "fontName": "Mali",
             "color": "#ff0019",
             "messages": [
-              "Ben \u2764 Jocelyn",
-              "09/01/2025",
+              "Đinh Duy Vinh",
+              "Châu Thanh Vy",
+              "21/11/2020",
+              "Hơn 4 năm qua, dù chưa lần gặp mặt, cảm ơn Vy rất nhiều vì đã luôn là người bạn tri kỷ, cùng Vinh sẻ chia mọi buồn vui cuộc sống.",
               "Thank u for coming"
             ],
             "music": ""
