--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               "Hơn 4 năm qua, dù chưa lần gặp mặt, cảm ơn Vy rất nhiều vì đã luôn là người bạn tri kỷ, cùng Vinh sẻ chia mọi buồn vui cuộc sống.",
               "Thank u for coming"
             ],
-            "music": ""
+            "music": "https://files.catbox.moe/e04g5e.mp3"
           },
           "clientId": "/"
         },
